--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1><img src="notes.png" alt="notes">Notes</h1>
+        <h1><img src="orangenotes.png" alt="notes">Notes</h1>
         <button class="btn"><img src="edit.png" alt="edit">Create Notes</button>
         <div class="notes_container">
             <!-- <p contenteditable="true" class="input_box">
